--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,19 +1,15 @@
 FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     mariadb-server mariadb-client \
-    && rm -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/*
 
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-
 COPY tools/dbinit.sh /usr/local/bin/dbinit.sh
-RUN chmod +x /usr/local/bin/dbinit.sh
-
-RUN mkdir -p /var/lib/mysql /run/mysqld  && \
-    chown -R mysql:mysql /var/lib/mysql /run/mysqld
+RUN chmod +x /usr/local/bin/dbinit.sh \
+ && mkdir -p /var/lib/mysql /run/mysqld \
+ && chown -R mysql:mysql /var/lib/mysql /run/mysqld
 
 EXPOSE 3306
-
 ENTRYPOINT ["/usr/local/bin/dbinit.sh"]
-
-
+CMD ["mariadbd"]
