--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,15 +1,14 @@
 FROM debian:bullseye
 
-RUN apt-get update -y && apt-get install -y; apt-get install -y nginx openssl
-
-RUN mkdir -p /etc/nginx/ssl
-
-RUN openssl req -x509 -nodes \
-	-days 365 \
-	-newkey rsa:4096 \
-	-keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt \
-	-subj "/C=TR/ST=Kocaeli/L=Kocaeli/O=42/OU=42/CN=merboyac.42.fr"
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    nginx openssl ca-certificates \
+ && rm -rf /var/lib/apt/lists/*
 
 COPY ./conf/nginx.conf /etc/nginx/conf.d/nginx.conf
+COPY ./tools/nginx_init.sh /usr/local/bin/nginx_init.sh
+RUN chmod +x /usr/local/bin/nginx_init.sh \
+ && mkdir -p /etc/nginx/ssl /var/log/nginx
 
+EXPOSE 443
+ENTRYPOINT ["/usr/local/bin/nginx_init.sh"]
 CMD ["nginx", "-g", "daemon off;"]
